--- a/style.css
+++ b/style.css
@@ -48,6 +48,6 @@ kbd {
 
 .fab {
     color: #00cc44;
-    text-align: center;
-    justify-content: center;
+    margin-left: 25%;
+    margin-top: 23%;
 }
